client-participation/css/conversationView.scss
/* ... */
.darkPanel {
  background-color: $panel-color;
}
.darkPanelBorderTop {
  border-top: 1px solid lightgray;
}
.darkPanelBorderBottom {
  border-bottom: 1px solid lightgray;
}

#agreeButton, #disagreeButton {
  border-inline-end: 0px
}

#agreeButton {
  border-inline-start: 0;
  //border-radius: 0 0 0 8px;
}

#passButton {
  //border-radius: 0 0 8px 0;
}

#agreeButton, #disagreeButton, #passButton {
  border-bottom: 0;
  // background: #fafafa;
  -webkit-font-smoothing: antialiased;

  // prevent clipped right edge and extra padding on left edge on mobile
  padding-inline-start: 0px;
  padding-inline-end: 0px;

  // Only allow hovering when not on iOS ( see https://github.com/twbs/bootstrap/issues/12832 )
  &.vote-btn-w-hover {
    &:hover {
      border-color: #bbb;
      background: #eee;
    }
  }
}

.groupButton {
    color: rgb(0,0,0);
    text-shadow: 0px 1px 0px rgba(255,255,255,0.59);
    font-size: 12px;
    display: inline;
    position: relative;
    margin: 0px 1px 0px 1px;
    width: auto;
    height: auto;
    background: #ececec;
    padding: 6px 10px 6px 10px;
    outline: none;
    border: 1px solid #d8d8d8;
    border-bottom: 1px solid #ccc;
    border-radius: 3px;
    cursor: pointer;
}

.groupButton:hover {
    background: #D2D2D2;
}

.selectedGroupButton {
    color: rgb(0,0,0);
    background: #D2D2D2;
    text-shadow: 0px 1px 0px rgba(255,255,255,0.53);
    border: 1px solid #d2d2d2;
    border-bottom: 1px solid #d8d8d8;
    -webkit-box-shadow: 0px 1px 0px rgba(255,255,255,0.58), inset 0px 1px 6px rgba(0,0,0,0.07), inset 0px -14px 13px rgba(255,255,255,0.20);
    -moz-box-shadow: 0px 1px 0px rgba(255,255,255,0.58), inset 0px 1px 6px rgba(0,0,0,0.07), inset 0px -14px 13px rgba(255,255,255,0.20);
    -o-box-shadow: 0px 1px 0px rgba(255,255,255,0.58), inset 0px 1px 6px rgba(0,0,0,0.07), inset 0px -14px 13px rgba(255,255,255,0.20);
    box-shadow: 0px 1px 0px rgba(255,255,255,0.58), inset 0px 1px 6px rgba(0,0,0,0.07), inset 0px -14px 13px rgba(255,255,255,0.20);
}


.btn-vote {
  // set this independently of the overall font size, since they're difficult to get right.
  font-family: $sans-font;
  font-size: 14px;
  font-weight: 700;
  display: inline;
  padding: 10px 0px; // no horizontal padding - to prevent the right edge of "disagree" from being clipped on iOS
}

.tab-conv {
  // set this independently of the overall font size, since they're difficult to get right.
  font-size: 16px;
}
.control {
  // set this independently of the overall font size, since they're difficult to get right.
  font-size: 16px;
}

.conversationViewHeadline {
  margin-bottom: 20px;
}

.modToggle {
  cursor: pointer;
  padding: 10px 20px 10px 20px;
}

.modButtonContainer {
  display: block;
  margin-inline-start: 55px;
  margin-bottom: 25px;
}

.moderateButton {
  background-color: rgb(230,230,230);
  margin-inline-end: 20px;
  border-radius: 3px;
  font-weight: 500;
  transition: all .2s ease-in-out;
}

.moderateButton:hover {
  -ms-transform: scale(1.12,1.12); /* IE 9 */
  -webkit-transform: scale(1.12,1.12); /* Safari */
  transform: scale(1.12,1.12);

}

.moderateSubmitButton {
  font-size: 16px;
  border-radius: 3px;
  background-color: #3498db;
  color: white;
  font-weight: 500;
  display: inline;
}

.selectedModerateButton {
  background-color: #3498db;
  color: white;
}

#comment_message_container p {
  opacity: 0.8;
  font-size: 0.8rem !important;
  padding-top: 0.2rem;
}

.reactionButtons {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-flow: row wrap;
  justify-content: start;
  gap: 1rem;
}

@media (max-width: 400px) {
  .reactionButtons {
    flex-flow: column;
    gap: 0.5rem;
    margin-top: 1rem;
  }
}

.reactionButton{
  cursor: pointer;
  //transition: all .2s ease-in-out;
  color: white;
  border: none;
  background-color: transparent;
  text-decoration: none;
  font-size: 14px;
  font-family: "Inter", Helvetica, sans-serif;
  text-rendering: optimizeLegibility;
  padding: 0;
  display: flex;
  align-items: center;
  //margin-right: 1rem;
  //margin-top: 0.5rem;
  height: 2rem;

  &:hover {
    background: transparent;
    color: black;

    & span {
      background: white;
    }
  }

  & span {
    height: 100%;
    display: flex;
    align-items: center;
    padding: 0px 1rem 0;
    //margin-top: 3px;
    background: transparent;
    border-radius: 2rem;
    border: 1px solid white;
    //transition: .25s all;
  }
}

.top-buttons {
  display: flex;
  gap: 10px;
  position: absolute;
  top: 1.5rem;
  right: 0;
}
@media (max-width: 600px) {
  .top-buttons {
    right: inherit;
    left: 0;
    width: 100%;
  }

  #showResultsButton, #switchBetweenCommentsAndVotingButton {
    width: fit-content;

    & span {
      width: 100%;
      justify-content: center;
      padding: 0 0.75rem 0;
      font-size: 0.8rem;
    }
  }
}

#switchBetweenCommentsAndVotingButton {
  //position: absolute;
  //right: 2rem;
  //top: 1rem;
  color: black;

  &:hover span {
    color: black;
    background: $brand-color-darker;
    border: 1px solid $brand-color-darker;
  }

  & span {
    background: $brand-color;
    border: 1px solid $brand-color;
    margin: 0 2rem 0 0;
  }
}

#showResultsButton {
  //position: absolute;
  //right: 8rem;
  //top: 1rem;
  margin: 0 0 0 2rem;
}

#visualization_div {
  width: 100%;
}
.vis_container {
  margin: 0px;
  // max-width: 900px;
  min-width: 270px;
  min-height: 145px;
  text-align: right; // for the "show legend" button
}

.nudgeLeft {
  margin-inline-start: -20px;
}

.icon-remove {
  cursor: hand;
  cursor: pointer;
}

.cursorPointer {
  cursor: pointer;
}

.popover_helper_class {
  cursor: pointer;
  text-decoration: underline;
}
.popover_helper_class:hover{
  color: #7f8c8d;
}

svg {
  border: none;
  display: block; /* prevent weird margins under vis */
}
/* ... */

